# t3sting

./: CMakeLists.txt  README.md
include/: abort.h  assertions.h  colors.h  params.h  t3sting.h  testing.h
src/: abort.c  assertions.c  testing.c
